syntax = "proto3";
package proto;

//;前面的“protobuf_09_stream02/proto”是当前proto文件所在路径
//;后面的“stream02”是当前proto文件生成之后*pb.go文件的package包路径，即package stream02
option go_package = "protobuf_09_stream02/proto;stream02";

service StreamService {
  // 1️⃣ 普通一元 RPC
  rpc SayHello(HelloRequest) returns (HelloResponse);

  // 2️⃣ 服务端流式 RPC
  rpc ListHello(HelloRequest) returns (stream HelloResponse);

  // 3️⃣ 客户端流式 RPC
  rpc RecordHello(stream HelloRequest) returns (HelloResponse);

  // 4️⃣ 双向流式 RPC
  rpc Chat(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

// protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/stream02.proto
